src/objects/Apttus_Rebate__RebateSystemProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Rebate System properties. The record should be named as &quot;System Properties&quot;.</description>
    <fields>
        <fullName>Apttus_Rebate__IncentivePayoutCallbackClass__c</fullName>
        <description>The incentive payout callback class name. The class should implement the CustomClass.IIncentivePayoutCallback interface.</description>
        <inlineHelpText>The incentive payout callback class name. The class should implement the CustomClass.IIncentivePayoutCallback interface.</inlineHelpText>
        <label>Incentive Payout Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__InputBusinessObject__c</fullName>
        <defaultValue>&quot;Apttus_Config2__OrderLineItem__c&quot;</defaultValue>
        <description>The Api name of the business object which provides the input orders for rebate calculation.

Valid values are:
=============
Apttus_Config2__OrderLineItem__c
Apttus_Config2__ExternalOrderSummaryItem__c</description>
        <inlineHelpText>The Api name of the business object which provides the input orders for rebate calculation.

Valid values are:
=============
Apttus_Config2__OrderLineItem__c
Apttus_Config2__ExternalOrderSummaryItem__c</inlineHelpText>
        <label>Input Business Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__RebateCalcBatchSize__c</fullName>
        <defaultValue>100</defaultValue>
        <description>The batch size for the rebate calculation job</description>
        <inlineHelpText>The batch size for the rebate calculation job</inlineHelpText>
        <label>Rebate Calc Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__RebateRecordTypes__c</fullName>
        <description>Enter the list of rebate record types. Each record type should be separated by a new line.</description>
        <inlineHelpText>Enter the list of rebate record types. Each record type should be separated by a new line.</inlineHelpText>
        <label>Rebate Record Types</label>
        <type>TextArea</type>
    </fields>
    <label>Rebate System Properties</label>
</CustomObject>